--- a/build.gradle
+++ b/build.gradle
@@ -41,5 +41,5 @@ dependencies {
     compile group: 'io.jsonwebtoken', name: 'jjwt', version: '0.8.0'
     compile group: 'javax.xml.bind', name: 'jaxb-api', version: '2.3.0'
     compile group: 'com.google.collections', name: 'google-collections', version: '1.0'
-
+    implementation 'com.auth0:java-jwt:3.8.1'
 }
